# pharma_api

./: .gitignore  .tool-versions  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: Makefile  config.py  main.py
src/database/: __init__.py  clientes.py  fornecedores.py  medicamentos.py  models.py  prescricoes.py  schema.py
src/router/: clientes.py  fornecedor.py  medicamentos.py  prescricao.py
src/tests/: conftest.py  test_clientes.py  test_fornecedor.py  test_medicamentos.py  test_prescricao.py
