[tool.poetry]
name = "project-teste"
version = "0.1.0"
description = ""
authors = ["caiolul <caiolucena.il@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
uvicorn = "^0.29.0"
databases = "^0.9.0"
pydantic = "^2.7.1"
pytest = "^8.2.1"
isort = "^5.13.2"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
